force-app/main/default/objects/Visit_History__c/Visit_History__c.object-meta.xml
<CustomObject>
    <description>Stores details of patient visit histories</description>
    <label>Visit History</label>
    <nameField>
        <label>Visit History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>