force-app/main/default/objects/Visit_History__c/fields/Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Histories</relationshipLabel>
    <relationshipName>Visit_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>