force-app/main/default/objects/Visit_History__c/fields/Medical_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Medical_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Histories (Medical Consultant)</relationshipLabel>
    <relationshipName>Visit_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>