force-app/main/default/objects/Visit_History__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Histories</relationshipLabel>
    <relationshipName>Visit_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>